# rope

./: CMakeLists.txt  README.md
include/: rope.h
src/: rope.c
tests/: test_allocate_leaf.c  test_build_tree.c  test_collect_leaves.c  test_compare_nodes.c  test_concat.c  test_concat_no_rebalance.c  test_divide_leaf.c  test_split_no_rebalance.c
